syntax = "proto3";
option go_package = "./proto/test_v1";
package test_v1;

message UserMessage {
  string Name = 1;
  string Email = 2;
  string Phone = 3;
}